--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,11 @@
 *.log
 
 # sbt specific
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
+
 
 # Scala-IDE specific
 .scala_dependencies
+
+*~
+
+*.swp
